@@ -5,20 +5,6 @@
 	<title>Revision History</title>
 	 <simpara>
 		<revhistory>
-			<revision>
-				<revnumber>3.2-1.1</revnumber>
-				<date>Fri Sep 20 2013</date>
-				<author>
-					<firstname>Jeff</firstname>
-					<surname>Fearn</surname>
-					<email>jfearn@redhat.com</email>
-				</author>
-				<revdescription>
-					<simplelist>
-						<member>I file della traduzione sono sincronizzati con con le versioni 3.2-1 dei sorgenti XML</member>
-					</simplelist>
-				</revdescription>
-			</revision>
 			 <revision>
 				<revnumber>3.2-0.1</revnumber>
 				 <date>Thu Jul 11 2013</date>
