@@ -15,7 +15,7 @@
 
 Name:           publican
 Version:        3.9.9
-Release:        0%{?dist}
+Release:        0%{?dist}.t3
 Summary:        Common files and scripts for publishing with DocBook XML
 # For a breakdown of the licensing, refer to LICENSE
 License:        (GPLv2+ or Artistic) and CC0
@@ -97,6 +97,7 @@ BuildRequires:  perl(DBD::SQLite)
 BuildRequires:  docbook5-schemas
 BuildRequires:  docbook5-style-xsl >= 1.78.1
 BuildRequires:  perl(version) >= 0.77
+BuildRequires:  perl(Locale::Msgfmt)
 
 # Most of these are handled automatically
 Requires:       perl(:MODULE_COMPAT_%(eval "`%{__perl} -V:version`"; echo $version))
@@ -205,12 +206,6 @@ sed -i -e 's|@@ICON@@|%{_docdir}/%{name}-doc-%{version}/en-US/images/icon.svg|' 
 
 desktop-file-install --vendor="%{my_vendor}" --dir=$RPM_BUILD_ROOT%{_datadir}/applications %{name}.desktop
 
-for file in po/*.po; do
-    lang=`echo "$file" | sed -e 's/po\/\(.*\)\.po/\1/'`;
-    mkdir -p $RPM_BUILD_ROOT%{_datadir}/locale/$lang/LC_MESSAGES;
-    msgfmt $file -o $RPM_BUILD_ROOT%{_datadir}/locale/$lang/LC_MESSAGES/%{name}.mo;
-done
-
 %find_lang %{name}
 
 # Package web common files
@@ -276,7 +271,7 @@ rm -rf $RPM_BUILD_ROOT
 %{wwwdir}/common-db5
 
 %changelog
-* Friday Oct 4  2013 Jeff Fearn <jfearn@redhat.com> 3.9.9-0
+* Fri Oct 4  2013 Jeff Fearn <jfearn@redhat.com> 3.9.9-0
 - Publican 4.0 RC1
 
 * Wed Sep 04 2013 Jeff Fearn <jfearn@redhat.com> 3.2.1-0
